@@ -26,6 +26,8 @@ class Fork
         virtual void parentRedirections();  // do parent redirections
         virtual void parentProcess() = 0;   // must be implemented
 
+        void prepareDaemon() const;         // prepares for a daemon
+
         int waitForChild();                 // returns the status
 };
 
