@@ -28,6 +28,7 @@ case "$1" in
         then
             scp ${PROJECT}_${VERSION}.tar.gz oosix:ftp/debian/${PROJECT}
             md5sum ${PROJECT}_${VERSION}.tar.gz
+            rm ${PROJECT}_${VERSION}.tar.gz
         fi
     ;;
 
@@ -37,7 +38,7 @@ Provide arg:
     d (debian)  to create a local .orig.tar.gz archive in 
                 ../debian/${PROJECT}/tarballs
     l (local)   to create ${PROJECT}_${VERSION}.tar.gz in this directory
-    u (upload)  same as 't', but upload to oosix and show MD5 hash
+    u (upload)  same as 'l', but upload to oosix and show MD5 hash
 "
     exit 1
     ;;
