@@ -1,5 +1,8 @@
 bobcat (2.02.02) (TO DO)
 
+  * Added Fork::prepareDaemon() performing common actions when starting a
+    daemon child process.
+
   * Repaired DST and extraction bugs in DateTime
 
   * OFoldStreambuf's inheritance tree now places the OFilterStreambuf ahead of
@@ -17,7 +20,7 @@ bobcat (2.02.02) (TO DO)
   * Replaces and extends intermediate release 2.02.01 only made available at
     SourceForge 
 
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 31 Mar 2009 12:40:40 +0200
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 03 Apr 2009 16:29:47 +0200
 
 bobcat (2.01.1)
 
